crates/swc/tests/tsc-references/types/nonPrimitive/nonPrimitiveIndexingWithForInNoImplicitAny/input.ts/es2015.1.normal/output.js
// @noImplicitAny: true
var a;
for(var key in a){
    var value = a[key]; // error
}
